--- a/pom.xml
+++ b/pom.xml
@@ -218,6 +218,18 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>1.5.19.RELEASE</version>
+				<configuration>
+					<jvmArguments>
+						-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8090
+					</jvmArguments>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
