--- a/pom.xml
+++ b/pom.xml
@@ -201,8 +201,14 @@
 			<artifactId>sli4j-slf4j-simple</artifactId>
 			<version>2.0</version>
 		</dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.1.0</version>
+            <scope>compile</scope>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
