--- a/pom.xml
+++ b/pom.xml
@@ -207,7 +207,11 @@
             <version>7.1.0</version>
             <scope>compile</scope>
         </dependency>
-
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.29</version>
+		</dependency>
     </dependencies>
 
 	<build>
@@ -225,16 +229,7 @@
 				</configuration>
 			</plugin>
 
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>1.5.19.RELEASE</version>
-				<configuration>
-					<jvmArguments>
-						-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8090
-					</jvmArguments>
-				</configuration>
-			</plugin>
+
 
 		</plugins>
 	</build>
