--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.5.9</version>
-<!--		<relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
+		<relativePath>../</relativePath> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.freedom</groupId>
 	<artifactId>sales</artifactId>
