--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.8</version>
+		<version>2.5.9</version>
 	</parent>
 	<groupId>com.freedom</groupId>
 	<artifactId>sales</artifactId>
@@ -214,7 +214,30 @@
 			<version>5.1.29</version>
 		</dependency>
     </dependencies>
+	<profiles>
+		<profile>
+			<id>8888</id>
+			<properties>
+				<profileActive>8888</profileActive>
+			</properties>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+		</profile>
+		<profile>
+			<id>9999</id>
+			<properties>
+				<profileActive>9999</profileActive>
+			</properties>
+		</profile>
+		<profile>
+			<id>6666</id>
+			<properties>
+				<profileActive>6666</profileActive>
+			</properties>
+		</profile>
 
+	</profiles>
 	<build>
 		<plugins>
 			<plugin>
@@ -233,6 +256,26 @@
 
 
 		</plugins>
+		<resources>
+			<resource>
+				<directory>src/main/webapp</directory>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<includes>
+					<include>/Users/freedom/CodeGood/javademo/SalesPromotionBackend/SalesPromotionBackend/src/main/resources/application-${profileActive}.yml</include>
+					<include>application.yml</include>
+					<include>**/*.xml</include>
+				</includes>
+				<filtering>true</filtering>
+			</resource>
+			<resource>
+				<directory>src/main/java</directory>
+				<includes>
+					<include>**/*.xml</include>
+				</includes>
+			</resource>
+		</resources>
 	</build>
 
 </project>
